[package]
name = "nsubset"
version = "0.1.0"
authors = ["Robin van Dijk <robin.van.dijk@target-holding.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nsubset"
path = "src/lib.rs"

[[bin]]
name = "nsubset-bin"
path = "src/main.rs"

[dependencies]
num-integer = "0.1.40"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false